# oxideav-aac

./: CHANGELOG.md  Cargo.toml  README.md
examples/: dump_concat_gapless.rs  encode_he_aac.rs  imdct_unit_test.rs  probe_lc_amp.rs  sbr_probe.rs  spectrum_compare.rs
src/: adts.rs  asc.rs  bitreader.rs  decoder.rs  encoder.rs  gapless.rs  he_aac_encoder.rs  huffman.rs  huffman_tables.rs  ics.rs  imdct.rs  latm.rs  ld_eld.rs  lib.rs  loas.rs  mdct.rs  pce.rs  pns.rs  psy.rs  pulse.rs  sfband.rs  syntax.rs  synth.rs  tns.rs  tns_analyse.rs  transient.rs  usac.rs  window.rs
src/sbr/: bitstream.rs  decode.rs  encode.rs  freq.rs  hf_adjust.rs  hf_gen.rs  mod.rs  ps.rs  qmf.rs  tables.rs  tables_data.rs
tests/: cbr_bit_reservoir.rs  decode_fixture.rs  docs_corpus.rs  encode_gapless.rs  encode_pns_is_pulse.rs  encode_pns_savings.rs  encode_roundtrip.rs  encode_tns.rs  encoder_asc.rs  fil_esc_count_zero.rs  he_aac_ffmpeg_decodes.rs  he_aac_psy_validation.rs  he_aac_v2_encode.rs  he_aac_v2_multi_env.rs  he_aac_v2_psnr_afconvert.rs  he_aac_v2_real_ps.rs  lc_rms_interop_r19.rs  ld_filterbank_round_trip.rs  psy_corpus_validation.rs  psy_model_bench.rs  r23_he_aac_isolation.rs  r23_lc_24khz_probe.rs  r24_mono_ffmpeg_check.rs  r24_sbr_fil_diff.rs  r26_no_sbr_dequant_warning.rs  r27_ms_cpe_psy_diagnose.rs  registers_via_distributed_slice.rs  sbr_encode_roundtrip.rs  sbr_encode_stereo_roundtrip.rs  sbr_he_aac_ffmpeg.rs  sbr_he_aac_ffmpeg_amplitude_r18.rs  sbr_he_aac_psnr.rs  sbr_he_aac_stereo_ffmpeg.rs  sbr_he_aac_v2_ipdopd_hunt.rs  sbr_he_aac_v2_ps.rs  sbr_smoke.rs
